<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_bg">

    <LinearLayout
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:padding="10dp"
        android:onClick="backClick">

        <ImageView
            android:layout_width="@dimen/home_icon_size"
            android:layout_height="@dimen/home_icon_size"
            android:src="@drawable/ic_back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/back_button"
        android:gravity="center_vertical"
        android:padding="25dp">

        <TextView
            android:fontFamily="@font/app_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/text_layout"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_email" />

            <android.support.v7.widget.AppCompatEditText
                android:fontFamily="@font/app_font"
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/email_icon"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium"
                android:inputType="textEmailAddress"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/bottom_layout"
        android:background="@color/colorAccent">

        <LinearLayout
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:id="@+id/reset_password_button"
            android:text="@string/forgot_password">

            <TextView
                android:fontFamily="@font/app_font"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/reset_password"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_big" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

    </RelativeLayout>
</RelativeLayout>
